--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <div class="app-container">
         <!-- Navigation -->
         <nav class="navbar">
-            <div class="logo">
-                <a href="#" data-section="home">BA</a>
+            <div class="logo-container">
+                <div class="logo">
+                    <a href="#home">
+                        <img src="assets/Black White Bold Modern Studio Logo/1.png" alt="Boluwatife Logo" class="logo-img">
+                    </a>
+                </div>
             </div>
             <ul class="nav-links">
                 <li><a href="#home" class="active" data-section="home">Home</a></li>
