updated ui ux functions for better usability

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section id="home" class="section active">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h1><span class="norm-text">Hi, I'm </span><span class="name-highlight">Bolu</span><span>watife Alalade</span></h1>
+                        <h1><span class="norm-text">Hi, I'm </span><a href="#about" class="name-highlight" data-section="about">Bolu</a><span>watife Alalade</span></h1>
                         <p class="subtitle">A progressive Frontend Developer</p>
                         <div class="cta-buttons">
                             <a href="#" class="cta-button primary" data-section="contact">Get in Touch</a>
@@ -77,9 +77,13 @@
                     <h2 class="section-title">About Me</h2>
                     <div class="about-grid">
                         <div class="about-text">
-                            <p>I'm a passionate web developer with a keen eye for creating beautiful and functional digital experiences. With a strong foundation in modern web technologies, I specialize in building responsive and user-friendly applications.</p>
-                            <p>My journey in web development began with a curiosity for creating things that live on the internet. I started with HTML and CSS, gradually moving to JavaScript and modern frameworks. Today, I'm proficient in building full-stack applications using React, Node.js, and various other technologies.</p>
-                            <p>I believe in writing clean, maintainable code and creating intuitive user interfaces that make a difference. My approach combines technical expertise with creative problem-solving to deliver exceptional digital experiences.</p>
+                            <p>Are you looking for a web developer who not only builds stunning websites but also ensures they convert visitors into customers? You're in the right place.
+                            </p>
+                            <p>I specialize in creating high-performance, user-friendly web applications that engage users and drive business growth. With expertise in React, Node.js, and modern web technologies, I build fast, scalable, and responsive digital solutions tailored to your needs.
+                            </p>
+                            <p>What sets me apart? I don't just write code—I craft seamless experiences that enhance usability, boost engagement, and increase conversions. Whether it's an interactive web app, an optimized e-commerce site, or a cutting-edge SaaS platform, I bring a blend of technical excellence and strategic thinking to every project.
+                            </p>
+                            <p>Let's build something extraordinary. If you're ready to elevate your digital presence and maximize your impact, <a href="#contact" class="talk-to-contact" data-section="contact">let's talk.</a></p>
                         </div>
                         <div class="skills-container">
                             <h3>Technical Skills</h3>
@@ -119,7 +123,7 @@
             <!-- Projects Section -->
             <section id="projects" class="section">
                 <div class="section-content">
-                    <h2>Featured Projects</h2>
+                    <h2 class="section-title">Featured Projects</h2>
                     <div class="projects-grid">
                         <div class="project-card">
                             <div class="project-image">
@@ -151,7 +155,7 @@
                 <div class="section-content">
                     <div class="contact-grid">
                         <div class="contact-info">
-                            <h2>Get in Touch</h2>
+                            <h2 class="section-title">Get in Touch</h2>
                             <div class="contact-details">
                                 <div class="contact-item">
                                     <i class="fas fa-envelope"></i>
