--- a/index.html
+++ b/index.html
@@ -127,21 +127,43 @@
                     <div class="projects-grid">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="project1.jpg" alt="Project 1">
+                                <img src="/assets/rps-project.png" alt="RPS Project">
                                 <div class="project-overlay">
                                     <div class="project-links">
-                                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                                        <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                                        <a href="https://github.com/Ingenio0001/Rock-Paper-Scissor-Game" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                                        <a href="https://ingenio0001.github.io/Rock-Paper-Scissor-Game/" target="_blank" title="Preview link"><i class="fas fa-external-link-alt"></i></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="project-info">
-                                <h3>Project Name</h3>
-                                <p>Brief description of the project and its key features.</p>
+                                <h3>Rock Paper Scissors Game</h3>
+                                <p>A verus computer game optimized for cross-device responsiveness</p>
+                                <p>(Mobile app version accesible via github repository)</p>
                                 <div class="project-tech">
-                                    <span>React</span>
-                                    <span>Node.js</span>
-                                    <span>MongoDB</span>
+                                    <span>HTML</span>
+                                    <span>CSS3</span>
+                                    <span>JavaScript</span>
+                                    <span>React Native</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="/assets/e-commerce-project.png" alt="E-Commerce Project">
+                                <div class="project-overlay">
+                                    <div class="project-links">
+                                        <a href="https://github.com/Ingenio0001/ecommerce-product-page-frontend/tree/master" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                                        <a href="https://ingenio0001.github.io/ecommerce-product-page-frontend/" target="_blank" title="Preview link"><i class="fas fa-external-link-alt"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="project-info">
+                                <h3>E-Commerce Product Page</h3>
+                                <p>Single-Page E-Commerce product page with mobile responsiveness and dynamic functionality</p>
+                                <div class="project-tech">
+                                    <span>HTML</span>
+                                    <span>CSS3</span>
+                                    <span>JavaScript</span>
                                 </div>
                             </div>
                         </div>
